fixSpacing

--- a/front/src/App.css
+++ b/front/src/App.css
@@ -24,3 +24,7 @@
 .read-the-docs {
   color: #888;
 }
+
+h1:hover {
+  color: #a50000;
+}
